make traces only part of specific backup, make events optional detail of single backup
